# fast_flat

./: .black  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit.yaml  Dockerfile  Makefile  README.md  alembic.ini  db.py  docker-compose-deploy.yaml  docker-compose.test.yaml  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  pytest.ini  y  y.pub
admin/: __init__.py  flat.py  photo.py  promotion.py  renting.py
alembic/: env.py
alembic/versions/: 20230107195850_db0457b39bdf_user_and_flat.py  20230117124135_f206b061c4d6_first.py  20230119124552_0c0e634ee7b0_is_active.py  20230415142350_0db03cadc26e_add_photo_to_flat.py  20230415164241_b1f8ff7cddc0_filefield_to_url.py  20230418144931_164805dee5bb_add_column_in_flat.py  20230424143640_a63fba2eeabc_.py  20230424151846_14c41e73990f_status.py  20240317065746_726b187ef206_.py  20240317065848_b5f9c504be03_.py  20250518115133_1cd963bd9305_.py
base/: __init__.py  base.py  base_model.py
core/: db.py  jwt.py  user.py
core/exception/: __init__.py  common_exceprion.py
docker_configs/nginx/: Dockerfile  fast_flat.conf
flat/endpoints/: flat.py  photo.py  renting.py
flat/enums/: __init__.py  promotion.py
flat/messages/: __init__.py  renting.py
flat/models/: __init__.py  flat.py  photo.py  promotion.py  renting.py
flat/permissions/: __init__.py  flat_owner.py
flat/repositories/: __init__.py  base.py  flat.py  photo.py  renting.py
flat/schemas/: __init__.py  flat.py  photo.py  renting.py
tests/: conftest.py  test_flat.py  test_renting.py  test_user.py
users/: user.py
(+17 files in other folders)
