[tool.poetry]
name = "fast_flat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^2.0.10"
alembic = "^1.10.4"
pydantic = "^1.10.7"
fastapi = "^0.95.1"
fastapi-users-db-sqlalchemy = "^5.0.0"
dependency-injector = "^4.41.0"
environs = "^9.5.0"
asyncpg = "^0.27.0"
sqlalchemy-utils = "^0.41.1"
apache-libcloud = "^3.7.0"
aioboto3 = "^11.1.0"
aiohttp = "^3.8.4"
fasteners = "^0.18"
psycopg2-binary = "^2.9.6"
uvicorn = "^0.22.0"
pytest = "^7.3.1"
httpx = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
