[project]
name = "fast-flat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.5.0",
    "aiohttp>=3.13.2",
    "alembic>=1.17.2",
    "apache-libcloud>=3.8.0",
    "asyncpg>=0.31.0",
    "dependency-injector>=4.48.3",
    "environs>=14.5.0",
    "fastapi>=0.127.0",
    "fastapi-filter>=2.0.1",
    "fastapi-pagination>=0.15.4",
    "fastapi-users>=15.0.3",
    "fastapi-users-db-sqlalchemy>=7.0.0",
    "fasteners>=0.20",
    "httpx>=0.28.1",
    "pika>=1.3.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "sqladmin>=0.22.0",
    "sqlalchemy>=2.0.45",
    "sqlalchemy-utils>=0.42.1",
    "uvicorn>=0.40.0",
]
